# x-space-poker

./: .gitignore  CLAUDE.md  README.md
.claude/: settings.local.json
.github/workflows/: ci.yml
backend/: .env.example  alembic.ini  pyproject.toml
backend/alembic/: env.py
backend/alembic/versions/: 0001_initial.py  0002_hand_start_state.py
backend/app/api/: audio.py  auth.py  main.py  tables.py  ws.py
backend/app/core/: config.py  security.py
backend/app/db/: __init__.py  models.py  session.py
backend/app/engine/: __init__.py  cards.py  evaluator.py  pots.py  state.py  table.py
backend/app/services/: audio_bus.py  ban_list.py  event_bus.py  events.py  ledger.py  narration.py  narrator.py  narrator_consumer.py  oauth.py  persistence.py  persistence_consumer.py  recovery.py  replay.py  table_manager.py  tts.py  wire.py
backend/tests/integration/: conftest.py  test_action_timer.py  test_audio_bus.py  test_ban_list.py  test_event_ordering.py  test_narration_e2e.py  test_narrator.py  test_oauth.py  test_persistence.py  test_persistence_e2e.py  test_play_a_hand.py  test_redis_state_store.py  test_replay.py  test_routing.py  test_spectator.py  test_top_off.py  test_tts.py
backend/tests/unit/: test_engine.py  test_evaluator.py
docs/: architecture.md  legal.md  runbook.md
frontend/: index.html  package-lock.json  package.json  tsconfig.json  tsconfig.tsbuildinfo  vite.config.ts
frontend/src/: App.tsx  index.css  main.tsx
infra/aws/: README.md  main.tf
infra/azure/: README.md  main.tf
infra/docker/: Dockerfile  docker-compose.yml
(+16 files in other folders)
