[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "spaces-poker"
version = "0.1.0"
description = "Automated NLHE poker for X Spaces"
requires-python = ">=3.11,<3.12"
dependencies = [
    "fastapi==0.115.0",
    "uvicorn[standard]==0.32.0",
    "websockets==13.1",
    "pydantic==2.9.2",
    "pydantic-settings==2.5.2",
    "sqlalchemy[asyncio]==2.0.35",
    "asyncpg==0.29.0",
    "alembic==1.13.3",
    "redis==5.1.1",
    "httpx==0.27.2",
    "authlib==1.3.2",
    "treys==0.1.8",
    "python-jose[cryptography]==3.3.0",
    "structlog==24.4.0",
    "tenacity==9.0.0",
]

[project.optional-dependencies]
dev = [
    "pytest==8.3.3",
    "pytest-asyncio==0.24.0",
    "pytest-cov==5.0.0",
    "ruff==0.6.9",
    "mypy==1.11.2",
    "httpx==0.27.2",
    "freezegun==1.5.1",
    "aiosqlite==0.20.0",
    "fakeredis==2.24.1",
]

[tool.setuptools.packages.find]
where = ["."]
include = ["app*"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
addopts = "-ra --strict-markers"

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "I", "N", "UP", "B", "SIM", "RUF"]
ignore = ["E501"]

[tool.mypy]
python_version = "3.11"
strict = true
plugins = ["pydantic.mypy"]
